Zebra Change Log

Trunk (unreleased changes)

  INCOMPATIBLE CHANGES

  IMPROVEMENTS
  	
	PIG-993 Ability to drop a column group in a table (yanz and rangadi via gates)

    PIG-992 Separate schema related files into a schema package (yanz via
	gates)

  OPTIMIZATIONS

  BUG FIXES

	PIG-944  Change schema to be taken from StoreConfig instead of
	TableStorer's constructor (yanz via gates).

    PIG-918. Fix infinite loop only columns in first column group are
    specified. (Yan Zhou via rangadi)
 
    PIG-949. If an entire map is placed in non default column group, 
    and a specific key placed in another CG, the second CG did not 
    work as expected. (Yan Zhou, Jing Huang (tests) via rangadi)

    PIG-987. Access control for column groups. Users can specifify
    desired group, owner, and, permissions for a column group.
    (Yan Zhou via rangadi)
    
    PIG-991. Various minor bugs. (Yan Zhou via rangadi)

    PIG-986. Column groups can have explicit names specified in
    storage hint. (Yan Zhou via rangadi)
