@@ -61,6 +61,18 @@
   <property name="build.ivy.lib.dir" location="${build.ivy.dir}/lib" />
   <property name="ivy.lib.dir" location="${build.ivy.lib.dir}/Pig"/>
 
+  <property name="clover.db.dir" location="${build.dir}/test/clover/db"/>
+    <property name="clover.report.dir" location="${build.dir}/test/clover/reports"/>
+    <property name="clover.jar" location="${clover.home}/lib/clover.jar"/>
+    <available property="clover.present" file="${clover.jar}" />
+    <!-- check if clover reports should be generated -->
+    <condition property="clover.enabled">
+      <and>
+        <isset property="run.clover"/>
+        <isset property="clover.present"/>
+      </and>
+    </condition>
+
   <!-- javacc properties -->
   <property name="src.gen.dir" value="${basedir}/src-gen/" />
   <property name="src.gen.zebra.parser.dir" value="${src.gen.dir}/org/apache/hadoop/zebra/parser" />
@@ -107,6 +119,7 @@
     <pathelement location="${conf.dir}"/>
     <pathelement location="${pig.root}/build"/>
     <pathelement location="${build.examples}"/>
+	<pathelement path="${clover.jar}"/>
     <path refid="classpath"/>
   </path>
 
@@ -234,48 +247,6 @@
         <include name="pig-${version}-${name}.jar" />
       </fileset>
     </copy>
-  </target>
- 
-  <!-- ================================================================== -->
-  <!-- Run unit tests                                                     -->
-  <!-- ================================================================== -->
-  <target name="test" depends="compile-test, compile" if="test.available">
-    <echo message="contrib: ${name}"/>
-    <delete dir="${pig.log.dir}"/>
-    <mkdir dir="${pig.log.dir}"/>
-    <junit
-      printsummary="yes" showoutput="${test.output}" 
-      haltonfailure="no" fork="yes" maxmemory="256m"
-      errorProperty="tests.failed" failureProperty="tests.failed"
-      timeout="${test.timeout}">
-      
-      <sysproperty key="test.build.data" value="${build.test}/data"/>
-      <sysproperty key="build.test" value="${build.test}"/>
-      <sysproperty key="contrib.name" value="${name}"/>
-      <sysproperty key="hadoop.log.dir" value="${pig.log.dir}"/>
-      
-      <!-- requires fork=yes for: 
-        relative File paths to use the specified user.dir 
-        classpath to use build/contrib/*.jar
-      -->
-      <sysproperty key="user.dir" value="${build.test}/data"/>
-      
-      <sysproperty key="fs.default.name" value="${fs.default.name}"/>
-      <sysproperty key="pig.test.localoutputfile" value="${pig.test.localoutputfile}"/>
-      <sysproperty key="pig.log.dir" value="${pig.log.dir}"/> 
-      <classpath refid="test.classpath"/>
-      <formatter type="${test.junit.output.format}" />
-
-      <batchtest todir="${build.test}" unless="testcase">
-        <fileset dir="${src.test}"
-                 includes="**/Test*.java" excludes="**/${test.exclude}.java" />
-      </batchtest>
-      <batchtest todir="${build.test}" if="testcase">
-        <fileset dir="${src.test}" includes="**/${testcase}.java"/>
-      </batchtest>
-    </junit>
-    <fail if="tests.failed">Tests failed!</fail>
-
   </target>
 
   <!-- ================================================================== -->
