@@ -6,6 +6,9 @@ Trunk (unreleased changes)
 
   IMPROVEMENTS
   	
+	PIG-996 Add findbugs, checkstyle, and clover to zebra build file (chaow via
+	        gates)
+
 	PIG-993 Ability to drop a column group in a table (yanz and rangadi via gates)
 
     PIG-992 Separate schema related files into a schema package (yanz via
